[project]
name = "murok-backend"
version = "2.0.0"
description = "Murok powered by the Agricultural AI. Refreshed project from 2023."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.9.1",
    "attrs==25.3.0",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "colorama==0.4.6",
    "django<5.0.0",
    "django-cors-headers==4.7.0",
    "django-debug-toolbar==6.0.0",
    "django-dramatiq==0.14.0",
    "django-filter==25.1",
    "django-storages==1.14.6",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "dramatiq==1.18.0",
    "drf-spectacular==0.28.0",
    "drf-spectacular-sidecar==2025.9.1",
    "drfpasswordless==1.5.9",
    "gevent==25.8.2",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "hypercorn==0.17.3",
    "hyperframe==6.1.0",
    "idna==3.10",
    "inflection==0.5.1",
    "iniconfig==2.1.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.4.1",
    "mysqlclient>=2.2.7",
    "numpy==2.3.2",
    "packaging==25.0",
    "pika==1.3.2",
    "pillow==11.3.0",
    "pluggy==1.6.0",
    "priority==2.0.0",
    "prometheus-client==0.22.1",
    "pycparser==2.22",
    "pyjwt==2.10.1",
    "pytest==8.4.1",
    "pytest-django==4.11.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "referencing==0.36.2",
    "requests==2.32.5",
    "rpds-py==0.27.1",
    "simplejson==3.20.1",
    "six==1.17.0",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "watchdog==6.0.0",
    "watchdog-gevent==0.2.1",
    "wsproto==1.2",
    "zope-event==5.1.1",
    "zope-interface==7.2",
]
